Adding CSS modification to background

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,6 +22,7 @@ google-map {
 	background-color: #f9f9f9;
 	background-repeat: no-repeat;
     background-image: url('../images/background-800x170.png');
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
     color: #333;
 }
